add undo button

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,33 @@
 }
 .check-box {
 }
+.loader.run {
+  position: relative;
+  top: 6em;
+  left: 34%;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 10em;
+  height: 10em;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+#undo {
+  width: 3%;
+  position: relative;
+  top: 0.8em;
+}
+#undo:hover {
+  background-color: turquoise;
+}
 #search-section {
   padding: 1%;
 }
